# internet-search--llm-agent

.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh
api/: .gitignore  README.md  app.py  pyproject.toml
api/core/agent/: mindsearch_agent.py  mindsearch_prompt.py
backend/: README.md  pyproject.toml
backend/core/agent/: __init__.py  graph.py  mindsearch_agent.py  models.py  streaming.py
backend/test/: test.ipynb  test.py
frontend/: package-lock.json  package.json
web/: package-lock.json  package.json
web/app/: page.tsx
