[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "janus>=2.0.0",
    "tenacity>=9.1.2",
    "vllm>=0.5.4",
    "aiohttp",
    "arxiv",
    "asyncache",
    "asyncer",
    "distro",
    "duckduckgo_search==5.3.1b1",
    "filelock",
    "func_timeout",
    "griffe<1.0",
    "json5",
    "jsonschema",
    "jupyter==1.0.0",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "pydantic==2.6.4",
    "requests",
    "termcolor",
    "tiktoken",
    "timeout-decorator",
    "typing-extensions",
    "google-search-results",
    "lmdeploy>=0.2.5",
    "pillow",
    "python-pptx",
    "torch",
    "transformers",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true        # 标记为默认索引，可以放在末尾优先级最低

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
# 默认 default=false，将作为高优先级索引